[gd_scene load_steps=19 format=2]

[ext_resource path="res://mockup/CMCalculator - Screen 03 - Step 2 - Details v2.png" type="Texture" id=1]
[ext_resource path="res://button/ButtonPREVpressed.png" type="Texture" id=2]
[ext_resource path="res://button/ButtonHELPnormal.png" type="Texture" id=3]
[ext_resource path="res://button/ButtonHELPpressed.png" type="Texture" id=4]
[ext_resource path="res://button/ButtonPREVnormal.png" type="Texture" id=5]
[ext_resource path="res://fonts/LineEditArial36.tres" type="DynamicFont" id=6]
[ext_resource path="res://scripts/Mortgage.gd" type="Script" id=7]
[ext_resource path="res://button/ButtonRESETnormal.png" type="Texture" id=8]
[ext_resource path="res://background/background02.png" type="Texture" id=9]
[ext_resource path="res://button/ButtonNEXTnormal.png" type="Texture" id=10]
[ext_resource path="res://logo/SimpleTools_logo_small.png" type="Texture" id=11]
[ext_resource path="res://logo/productSmall.png" type="Texture" id=12]
[ext_resource path="res://button/ButtonNEXTpressed.png" type="Texture" id=13]
[ext_resource path="res://button/ButtonRESETpressed.png" type="Texture" id=14]
[ext_resource path="res://fonts/arial.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://fonts/MyriadPro-Regular.otf" type="DynamicFontData" id=16]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0.0666667, 0.270588, 0.94902, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=3]
size = 36
use_mipmaps = true
use_filter = true
font_data = ExtResource( 16 )

[node name="Mortgage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="BG" type="TextureRect" parent="."]
margin_right = 600.0
margin_bottom = 1024.0
texture = ExtResource( 9 )

[node name="Mock-up TextureRect" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="TopMarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 104
custom_constants/margin_top = 34

[node name="TopControl" type="Control" parent="TopMarginContainer"]
margin_top = 34.0
margin_right = 496.0
margin_bottom = 1024.0

[node name="HBoxContainer" type="HBoxContainer" parent="TopMarginContainer/TopControl"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -476.0
margin_bottom = 197.0
custom_constants/separation = 87

[node name="TextureRect" type="TextureRect" parent="TopMarginContainer/TopControl/HBoxContainer"]
margin_right = 275.0
margin_bottom = 197.0
texture = ExtResource( 11 )

[node name="TextureRect2" type="TextureRect" parent="TopMarginContainer/TopControl/HBoxContainer"]
margin_left = 362.0
margin_right = 559.0
margin_bottom = 197.0
texture = ExtResource( 12 )

[node name="Row2MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 119
custom_constants/margin_top = -284

[node name="Row2Control" type="Control" parent="Row2MarginContainer"]
margin_top = -284.0
margin_right = 481.0
margin_bottom = 1024.0

[node name="MarginContainer2" type="MarginContainer" parent="Row2MarginContainer/Row2Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -388.0
margin_top = -36.5
margin_bottom = 36.5
custom_constants/margin_right = 0

[node name="Label" type="Label" parent="Row2MarginContainer/Row2Control/MarginContainer2"]
margin_right = 388.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0.0745098, 0.235294, 0.854902, 1 )
custom_fonts/font = SubResource( 1 )
text = "Step 2:
Fill in Mortgage Details..."

[node name="Row5MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -600.0
margin_top = -512.5
margin_bottom = 512.5
custom_constants/margin_top = 253

[node name="Row5Control" type="Control" parent="Row5MarginContainer"]
margin_top = 253.0
margin_right = 600.0
margin_bottom = 1025.0

[node name="GridContainer" type="GridContainer" parent="Row5MarginContainer/Row5Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -584.0
margin_top = -132.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 20
columns = 2

[node name="mortgageDownLabel" type="Label" parent="Row5MarginContainer/Row5Control/GridContainer"]
unique_name_in_owner = true
margin_top = 7.0
margin_right = 372.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0.603922, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Down Payment $"
align = 2

[node name="mortgageDownPayment" type="LineEdit" parent="Row5MarginContainer/Row5Control/GridContainer"]
unique_name_in_owner = true
margin_left = 376.0
margin_right = 566.0
margin_bottom = 51.0
grow_horizontal = 0
custom_colors/font_color = Color( 0.988235, 0.862745, 0.721569, 1 )
custom_constants/minimum_spaces = 18
custom_fonts/font = ExtResource( 6 )
align = 2
editable = false
expand_to_text_length = true
virtual_keyboard_enabled = false

[node name="mortgagePrincipalLabel" type="Label" parent="Row5MarginContainer/Row5Control/GridContainer"]
unique_name_in_owner = true
margin_top = 78.0
margin_right = 372.0
margin_bottom = 114.0
custom_colors/font_color = Color( 0.603922, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Mortgage Principal $"
align = 2

[node name="mortgagePrincipal" type="LineEdit" parent="Row5MarginContainer/Row5Control/GridContainer"]
unique_name_in_owner = true
margin_left = 376.0
margin_top = 71.0
margin_right = 566.0
margin_bottom = 122.0
grow_horizontal = 0
custom_colors/font_color = Color( 0.988235, 0.862745, 0.721569, 1 )
custom_constants/minimum_spaces = 11
custom_fonts/font = ExtResource( 6 )
align = 2
editable = false
virtual_keyboard_enabled = false

[node name="mortgageTermLabel" type="Label" parent="Row5MarginContainer/Row5Control/GridContainer"]
unique_name_in_owner = true
margin_top = 149.0
margin_right = 372.0
margin_bottom = 185.0
custom_colors/font_color = Color( 0.603922, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Mortgage Term (yrs)"
align = 2

[node name="mortgageTerm" type="LineEdit" parent="Row5MarginContainer/Row5Control/GridContainer"]
unique_name_in_owner = true
margin_left = 376.0
margin_top = 142.0
margin_right = 566.0
margin_bottom = 193.0
grow_horizontal = 0
custom_colors/font_color = Color( 0.988235, 0.862745, 0.721569, 1 )
custom_constants/minimum_spaces = 11
custom_fonts/font = ExtResource( 6 )
align = 2
virtual_keyboard_enabled = false

[node name="mortgageAmortizationLabel" type="Label" parent="Row5MarginContainer/Row5Control/GridContainer"]
unique_name_in_owner = true
margin_top = 220.0
margin_right = 372.0
margin_bottom = 256.0
custom_colors/font_color = Color( 0.603922, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Amortization Period (yrs)"
align = 2

[node name="mortgageAmortization" type="LineEdit" parent="Row5MarginContainer/Row5Control/GridContainer"]
unique_name_in_owner = true
margin_left = 376.0
margin_top = 213.0
margin_right = 566.0
margin_bottom = 264.0
grow_horizontal = 0
custom_colors/font_color = Color( 0.988235, 0.862745, 0.721569, 1 )
custom_fonts/font = ExtResource( 6 )
align = 2
virtual_keyboard_enabled = false

[node name="HelpMarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 891.0
custom_constants/margin_right = -431
custom_constants/margin_bottom = 124

[node name="BottomControl" type="Control" parent="HelpMarginContainer"]
margin_right = 1031.0
margin_bottom = 9.0

[node name="HBoxContainer" type="HBoxContainer" parent="HelpMarginContainer/BottomControl"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -306.5
margin_top = -104.0
margin_right = 255.5
custom_constants/separation = 2

[node name="mortgageHelp" type="TextureButton" parent="HelpMarginContainer/BottomControl/HBoxContainer"]
margin_right = 186.0
margin_bottom = 104.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="BottomMarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 891.0
custom_constants/margin_right = -49
custom_constants/margin_bottom = 24

[node name="BottomControl" type="Control" parent="BottomMarginContainer"]
margin_right = 649.0
margin_bottom = 109.0

[node name="HBoxContainer" type="HBoxContainer" parent="BottomMarginContainer/BottomControl"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -306.5
margin_top = -104.0
margin_right = 255.5
custom_constants/separation = 2

[node name="mortgageReset" type="TextureButton" parent="BottomMarginContainer/BottomControl/HBoxContainer"]
margin_right = 186.0
margin_bottom = 104.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 14 )

[node name="mortgagePrevious" type="TextureButton" parent="BottomMarginContainer/BottomControl/HBoxContainer"]
margin_left = 188.0
margin_right = 374.0
margin_bottom = 104.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 2 )

[node name="mortgageNext" type="TextureButton" parent="BottomMarginContainer/BottomControl/HBoxContainer"]
margin_left = 376.0
margin_right = 562.0
margin_bottom = 104.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 13 )

[connection signal="focus_entered" from="Row5MarginContainer/Row5Control/GridContainer/mortgageTerm" to="." method="edit_term"]
[connection signal="focus_entered" from="Row5MarginContainer/Row5Control/GridContainer/mortgageAmortization" to="." method="edit_amortization"]
[connection signal="pressed" from="HelpMarginContainer/BottomControl/HBoxContainer/mortgageHelp" to="." method="get_help"]
[connection signal="pressed" from="BottomMarginContainer/BottomControl/HBoxContainer/mortgageReset" to="." method="reset_all"]
[connection signal="pressed" from="BottomMarginContainer/BottomControl/HBoxContainer/mortgagePrevious" to="." method="goto_previous"]
[connection signal="pressed" from="BottomMarginContainer/BottomControl/HBoxContainer/mortgageNext" to="." method="next_screen"]
